seaqt/QtGui/gen_qfontvariableaxis.h

typedef QFont::Tag QFont__Tag;
class QFontVariableAxis;
class QMetaObject;
typedef struct QFont__Tag QFont__Tag;
typedef struct QFontVariableAxis QFontVariableAxis;
typedef struct QMetaObject QMetaObject;
QFontVariableAxis* QFontVariableAxis_new();
QFontVariableAxis* QFontVariableAxis_new_from(QFontVariableAxis* from);
void QFontVariableAxis_swap(QFontVariableAxis* self, QFontVariableAxis* other);
void QFontVariableAxis_operatorAssign(QFontVariableAxis* self, QFontVariableAxis* from);
QFont__Tag* QFontVariableAxis_tag(const QFontVariableAxis* self);
void QFontVariableAxis_setTag(QFontVariableAxis* self, QFont__Tag* tag);
struct seaqt_string QFontVariableAxis_name(const QFontVariableAxis* self);
void QFontVariableAxis_setName(QFontVariableAxis* self, struct seaqt_string name);
double QFontVariableAxis_minimumValue(const QFontVariableAxis* self);
void QFontVariableAxis_setMinimumValue(QFontVariableAxis* self, double minimumValue);
double QFontVariableAxis_maximumValue(const QFontVariableAxis* self);
void QFontVariableAxis_setMaximumValue(QFontVariableAxis* self, double maximumValue);
double QFontVariableAxis_defaultValue(const QFontVariableAxis* self);
void QFontVariableAxis_setDefaultValue(QFontVariableAxis* self, double defaultValue);
const QMetaObject* QFontVariableAxis_staticMetaObject();